XW-615 Fix generics in all codebase XWork Java5 enhancements o added generics where possible o use parameterizes Collection classes where possible o converted for to for-each loops o optimized imports o updated tests o aligned parameter types with Struts2 o fixed some minor bugs